--- a/package.json
+++ b/package.json
@@ -6,5 +6,9 @@
     "react-router-dom": "^7.4.0",
     "redux": "^5.0.1",
     "redux-saga": "^1.3.0"
+  },
+  "scripts": {
+    "build": "react-scripts build",
+    "start": "react-scripts start"
   }
 }
