--- a/energy-monitor-frontend/package.json
+++ b/energy-monitor-frontend/package.json
@@ -12,14 +12,20 @@
 	},
 	"dependencies": {
 		"@reduxjs/toolkit": "^2.6.1",
+		"axios": "^1.8.4",
+		"chart.js": "^4.4.8",
 		"react": "^19.0.0",
+		"react-chartjs-2": "^5.3.0",
+		"react-datepicker": "^8.2.1",
 		"react-dom": "^19.0.0",
 		"react-redux": "^9.2.0",
 		"redux-saga": "^1.3.0"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.21.0",
-		"@types/react": "^19.0.10",
+		"@types/date-fns": "^2.5.3",
+		"@types/react": "^19.0.12",
+		"@types/react-datepicker": "^6.2.0",
 		"@types/react-dom": "^19.0.4",
 		"@types/redux-saga": "^0.9.31",
 		"@typescript-eslint/eslint-plugin": "^8.28.0",
