--- a/energy-monitor-backend/package.json
+++ b/energy-monitor-backend/package.json
@@ -8,14 +8,18 @@
 		"dev": "nodemon server.js",
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"clean": "rm -rf dist",
-		"build:babel": "babel src --out-dir dist --copy-files",
-		"build": "npm-run-all clean build:babel"
+		"build:babel": "node_modules/.bin/babel src --out-dir dist --extensions \".js,.ts\" --source-maps inline",
+		"build": "npm run clean && npm run build:babel",
+		"render-build": "npm install --only=prod && npm run build"
 	},
 	"keywords": [],
 	"author": "",
 	"license": "ISC",
 	"type": "module",
 	"dependencies": {
+		"@babel/cli": "^7.27.0",
+		"@babel/core": "^7.26.10",
+		"babel": "^5.8.38",
 		"bcryptjs": "^3.0.2",
 		"cors": "^2.8.5",
 		"dotenv": "^16.4.7",
@@ -25,6 +29,8 @@
 		"mongoose": "^8.12.2"
 	},
 	"devDependencies": {
+		"@babel/preset-env": "^7.26.9",
+		"@babel/preset-typescript": "^7.27.0",
 		"@eslint/js": "^9.23.0",
 		"@types/cors": "^2.8.17",
 		"@types/express": "^5.0.1",
@@ -33,10 +39,6 @@
 		"eslint-config-prettier": "^10.1.1",
 		"globals": "^16.0.0",
 		"nodemon": "^3.1.9",
-		"prettier": "^3.5.3",
-		"@babel/cli": "^7.22.10",
-		"@babel/core": "^7.22.10",
-		"@babel/preset-env": "^7.22.10",
-		"npm-run-all": "^4.1.5"
+		"prettier": "^3.5.3"
 	}
 }
